# bist-flow-intel

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
config/: actor_seeds.yaml  base.yaml  dev.yaml  known_companies.yaml
docs/: ARCHITECTURE.md  DATA_DICTIONARY.md  KAP_ENDPOINT_NOTES.md
docs/adr/: 0001-async-stack-choice.md
migrations/: env.py
migrations/versions/: 0001_initial_schema.py  0002_widen_ticker_varchar.py  0003_signal_tables.py  0004_graph_tables.py  0005_unlisted_tables.py
reports/cross-reference/: 2026-05-29_cross_reference.html
reports/daily/: 2026-05-28_signal.json
reports/forensic/: 2026-05-28_KAPLM_forensic_brief.html  2026-05-29_KAPLM_forensic_brief.html
reports/network/: 2026-05-28_network_intel.json  2026-05-29_network_intel.json
reports/sample/: daily_signal.example.json
scripts/: backfill_kap_insider.py  check_forward_returns.py  fix_company_names.py  init_db.sh  radar_diff.py  run_daily_radar.sh  seed_graph_from_insider_tx.py  tsg_acquire_fixtures.py  tsg_captcha_recon.py
src/flow_intel/cli/: main.py
src/flow_intel/core/: config.py  db.py  http.py  logging.py  time.py
src/flow_intel/data/: prices.py
src/flow_intel/models/: graph.py  kap.py  signal.py  unlisted.py
src/flow_intel/reports/: __init__.py  cross_reference_report.py  daily_signal.py  forensic_report.py  network_report.py
src/flow_intel/reports/templates/: base.html  cross_reference.html  executive_summary.html  financial_flow.html  pressure_analysis.html  tsg_layer.html
src/flow_intel/scrapers/: base.py
src/flow_intel/scrapers/kap/: client.py  insider.py  management.py  parser.py  types.py
src/flow_intel/signals/: __init__.py  base_rate.py  cluster.py  cross_reference.py  financial_flow.py  graph.py  returns.py
src/flow_intel/storage/: repository.py
src/trailing_edge/cli/: main.py
src/trailing_edge/core/: db.py  http.py  logging.py  time.py
src/trailing_edge/data/: prices.py
src/trailing_edge/models/: base.py  graph.py  kap.py  signal.py  unlisted.py
src/trailing_edge/reports/: __init__.py  cross_reference_report.py  daily_signal.py  forensic_report.py  network_report.py
src/trailing_edge/signals/: base_rate.py  cluster.py  cross_reference.py  entry_timing.py  financial_flow.py  graph.py  returns.py  sell_side.py
src/trailing_edge/storage/: repository.py
tests/: conftest.py
tests/fixtures/kap/: sample_insider_disclosure.html  sample_insider_disclosure_dkb.html
tests/fixtures/tsg/: ilan_search_form.html  pdf_popup.html  sample_gazette_ocr.txt  sample_search_results.html
tests/integration/graph/: conftest.py  test_graph_e2e.py
tests/integration/reports/: conftest.py  test_forensic_e2e.py
tests/integration/signals/: conftest.py  test_cluster_e2e.py  test_cross_reference_e2e.py  test_graph_e2e.py
tests/unit/graph/: test_graph_seed.py
tests/unit/reports/: test_forensic_report.py  test_tsg_layer.py
tests/unit/scripts/: test_radar_diff.py  test_seed_company_override.py
tests/unit/signals/: test_base_rate.py  test_cluster.py  test_cross_reference.py  test_entry_timing.py  test_financial_flow.py  test_graph.py  test_sell_side.py
(+35 files in other folders)
