[project]
name = "bist-flow-intel"
version = "0.1.0"
description = "KAP public OSINT intelligence engine for BIST insider flow analysis"
requires-python = ">=3.12"

dependencies = [
    "httpx>=0.27",
    "tenacity>=8.3",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "selectolax>=0.3",
    "beautifulsoup4>=4.12",
    "pdfminer.six>=20221105",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "click>=8.1",
    "structlog>=24.1",
    "PyYAML>=6.0",
    "python-dotenv>=1.0",
    "aiolimiter>=1.1",
    "tzdata>=2024.1",
    "yfinance>=0.2.40",
    "networkx>=3.3",
    "jinja2>=3.1.6",
    "matplotlib>=3.10.9",
    "playwright>=1.60.0",
    "rapidfuzz>=3.14.5",
    "pymupdf>=1.27.2.3",
    "pytesseract>=0.3.13",
    "2captcha-python>=2.0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "pytest-cov>=5.0",
]

[project.scripts]
flow-intel = "flow_intel.cli.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/flow_intel"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
