[project]
name = "trailingedge"
version = "0.1.0"
description = "Insider-transaction disclosure analytics for BIST (SPK II-15.1 / KAP)"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "Çağan Cebeci" }]
classifiers = [
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
]

dependencies = [
    "httpx>=0.27",
    "tenacity>=8.3",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "selectolax>=0.3",
    "beautifulsoup4>=4.12",
    "pdfminer.six>=20221105",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "click>=8.1",
    "structlog>=24.1",
    "PyYAML>=6.0",
    "python-dotenv>=1.0",
    "aiolimiter>=1.1",
    "tzdata>=2024.1",
    "yfinance>=0.2.40",
    "networkx>=3.3",
    "jinja2>=3.1.6",
    "matplotlib>=3.10.9",
    "playwright>=1.60.0",
    "rapidfuzz>=3.14.5",
    "pymupdf>=1.27.2.3",
    "pytesseract>=0.3.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "pytest-cov>=5.0",
    "mypy>=1.10",
]

[project.scripts]
trailingedge = "trailing_edge.cli.main:cli"
te = "trailing_edge.cli.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/trailing_edge"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]  # line length governed by formatter, not lint

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
follow_imports = "silent"
# Gradual adoption: the core + parsing surface is type-checked first.
files = ["src/trailing_edge/core", "src/trailing_edge/scrapers/kap"]
